# ForkMauceFromBitbucket

./: README.md
include/: MiningProblem.hpp  ResultHandler.hpp  TurbinesProblem.hpp
paperICML/: coordinationL-old.tex  dmrThesis.bib  example_paper.bib  xxxpaper.tex  xxxpaper_hado9_2.tex
paperICML/sections/: experiments.tex  proof.tex
plots/: makeAverage.sh  makeGnuplotScript.sh  plotGeneration.sh  plotResults.py  runExperiments.py  statistics.py  transform.py
plots/experiments/: experiments.json
src/: CMakeLists.txt  mines_llr_main.cpp  mines_mauce_main.cpp  mines_rnd_main.cpp  mines_scql_main.cpp  nodes_llr_main.cpp  nodes_mauce_main.cpp  nodes_rnd_main.cpp  nodes_scql_main.cpp  wind_llr_main.cpp  wind_mauce_main.cpp  wind_rnd_main.cpp  wind_scql_main.cpp
